[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://fonts/font_display_new_xl.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/font_display_new_s.tres" type="DynamicFont" id=3]
[ext_resource path="res://shaders/vignette.gdshader" type="Shader" id=4]
[ext_resource path="res://scripts/cosmetic/timer.gd" type="Script" id=5]
[ext_resource path="res://audio/sound/round_end.ogg" type="AudioStream" id=6]
[ext_resource path="res://audio/sound/timertick.ogg" type="AudioStream" id=7]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/color = Color( 0.0156863, 0, 0.0941176, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("StoryBase:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=8]
resource_name = "to_title"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2560, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2560, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Vignette:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -4, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2560, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "transition"
tracks/0/type = "value"
tracks/0/path = NodePath("StoryBase:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "flip_story"
tracks/0/type = "value"
tracks/0/path = NodePath("StoryBase:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 3, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "unflip_story"
tracks/0/type = "value"
tracks/0/path = NodePath("StoryBase:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.33, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0705882, 0.211765, 0.176471, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Vignette" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StoryBase" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -472.0
margin_top = -296.0
margin_right = 472.0
margin_bottom = 344.0
rect_pivot_offset = Vector2( 472, 295 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="Polygon2D" parent="StoryBase"]
position = Vector2( -168, -64 )
color = Color( 0, 0, 0, 1 )
antialiased = true
polygon = PoolVector2Array( 168, 64, 104, 224, 152, 384, 112, 592, 168, 704, 624, 712, 1112, 704, 1200, 520, 1136, 312, 1176, 216, 1112, 64 )

[node name="Panel" type="Panel" parent="StoryBase"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Story" type="TextEdit" parent="StoryBase"]
anchor_left = 0.017
anchor_top = 0.025
anchor_right = 0.983
anchor_bottom = 0.975
margin_left = -0.0480003
margin_right = 0.0479736
custom_colors/font_color_readonly = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/read_only = SubResource( 9 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
readonly = true
context_menu_enabled = false
shortcut_keys_enabled = false
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Control" parent="."]
visible = false
margin_left = 16.0
margin_top = 56.0
margin_right = 160.0
margin_bottom = 168.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
font = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "transition"
anims/RESET = SubResource( 7 )
anims/to_title = SubResource( 8 )
anims/transition = SubResource( 6 )

[node name="AnimationPlayerRound" type="AnimationPlayer" parent="."]
playback_speed = 1.2
anims/flip_story = SubResource( 10 )
anims/unflip_story = SubResource( 11 )

[node name="SoundTick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 8.0

[node name="SoundRoundEnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="TimerRoundEnd" type="Timer" parent="."]
wait_time = 1.55
one_shot = true

[connection signal="text_changed" from="StoryBase/Story" to="." method="_on_Story_text_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayerRound" to="." method="_on_AnimationPlayerRound_animation_finished"]
[connection signal="timeout" from="TimerRoundEnd" to="." method="_on_TimerRoundEnd_timeout"]
